[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Roboto-Light.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/Registration.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = -1.0
margin_right = 2.0
margin_bottom = -1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
margin_left = 287.0
margin_top = 102.0
margin_right = 691.0
margin_bottom = 164.0
custom_fonts/font = SubResource( 1 )
text = "Tank Shooter by Arman Shaikh"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Reg" type="Button" parent="."]
margin_left = 438.0
margin_top = 307.0
margin_right = 536.0
margin_bottom = 327.0
text = "Register"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="."]
margin_left = 438.0
margin_top = 338.0
margin_right = 536.0
margin_bottom = 358.0
text = "Back to login"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Userbox" type="TextEdit" parent="."]
margin_left = 415.0
margin_top = 193.0
margin_right = 559.0
margin_bottom = 217.0
text = "Username"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Passbox" type="TextEdit" parent="."]
margin_left = 414.0
margin_top = 226.0
margin_right = 558.0
margin_bottom = 250.0
text = "Password"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConPassbox" type="TextEdit" parent="."]
margin_left = 415.0
margin_top = 261.0
margin_right = 559.0
margin_bottom = 285.0
text = "Confirm Password"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label1" type="Label" parent="."]
visible = false
margin_left = 383.0
margin_top = 200.0
margin_right = 645.0
margin_bottom = 317.0
custom_fonts/font = SubResource( 2 )
text = "Max account reached"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
visible = false
margin_left = 357.0
margin_top = 381.0
margin_right = 783.0
margin_bottom = 532.0
custom_fonts/font = SubResource( 2 )
text = "Username already in use
Not long enough username or passowrd
Passwards do not match"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Reg" to="." method="_on_Reg_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
